# btc-forecast-timesfm

btc-timesfm-dashboard/: .gitignore  README.md  docker-compose.yml
btc-timesfm-dashboard/.claude/: settings.local.json
btc-timesfm-dashboard/backend/: .env.example  README.md  pyproject.toml
btc-timesfm-dashboard/backend/app/: __init__.py  backtest.py  data.py  forecast.py  main.py  mock_trading.py  schemas.py  settings.py  signals.py  storage.py
btc-timesfm-dashboard/backend/tests/: test_backtest.py  test_data.py  test_mock_trading.py  test_signals.py
btc-timesfm-dashboard/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
btc-timesfm-dashboard/frontend/src/: types.ts
btc-timesfm-dashboard/frontend/src/api/: client.ts
btc-timesfm-dashboard/frontend/src/components/: BacktestPanel.tsx  Dashboard.tsx  Disclaimer.tsx  EquityCurve.tsx  ForecastChart.tsx  MetricCard.tsx  ParameterPanel.tsx  SignalCard.tsx
btc-timesfm-dashboard/frontend/src/components/ui/: FieldHelp.tsx  Section.tsx  StaleBadge.tsx  Toast.tsx
btc-timesfm-dashboard/frontend/src/lib/: params.ts
btc-timesfm-dashboard/frontend/src/styles/: index.css
btc-timesfm-dashboard/scripts/: service.ps1  service.sh  setup_and_run_linux.sh  setup_and_run_windows.ps1
